# agent_sdk

./: ARCHITECTURE.md  Dockerfile  Makefile  README.md  _write_inits.py  docker-compose.yml  pyproject.toml  ruff.toml
agent_sdk/: __init__.py  config.py  exceptions.py  logging.py  types.py
agent_sdk/composability/: __init__.py  client.py  discovery.py  mcp.py  protocol.py  server.py
agent_sdk/core/: __init__.py  agent.py  context.py  llm.py  message.py  session.py  step.py  tool.py
agent_sdk/db/: __init__.py  connection.py  migrations.py  models.py
agent_sdk/db/repositories/: __init__.py  agent_registry_repo.py  approval_repo.py  audit_repo.py  knowledge_repo.py  memory_repo.py  session_repo.py  step_repo.py
agent_sdk/durability/: __init__.py  checkpoint.py  idempotency.py  recovery.py  replay.py
agent_sdk/governance/: __init__.py  approval.py  audit.py  policy.py  rules.py
agent_sdk/isolation/: __init__.py  filter.py  scope.py  validator.py
agent_sdk/persistence/: __init__.py  history.py  knowledge.py  memory.py  session_store.py
agent_sdk/scale/: __init__.py  circuit_breaker.py  pool.py  queue.py  rate_limiter.py  retry.py
shared/: plan.md  project_structure.json  task_list.json
tests/: conftest.py
tests/integration/: test_isolation.py  test_knowledge_store.py  test_memory_persistence.py  test_session_lifecycle.py
tests/unit/: test_circuit_breaker.py  test_config.py  test_exceptions.py  test_isolation.py  test_message.py  test_pool.py  test_retry.py  test_tool.py  test_types.py
